# swendsen_wang_ising

./: .gitignore  Blabla.txt  Cargo.toml  LICENSE  README.md  out_8x8.txt  parameter_8x8.txt  run_and_plot.ipynb
results/: 16x16_from_1.000_to_2.950_with_step_0.050.txt  32x32_from_1.000_to_2.950_with_step_0.050.txt  64x64_from_1.000_to_2.950_with_step_0.050.txt  8x8_from_1.000_to_2.950_with_step_0.050.txt  8x8_from_1.000_to_3.000_with_step_0.050.txt
results/critical_point/: out_128x128.txt  out_16x16.txt  out_32x32.txt  out_64x64.txt  out_8x8.txt  parameter_128x128.txt  parameter_16x16.txt  parameter_32x32.txt  parameter_64x64.txt  parameter_8x8.txt
results/overview/: out_16x16.txt  out_16x16_DEBUG.txt  out_32x32.txt  out_64x64.txt  out_8x8.txt  parameter_128x128.txt  parameter_16x16.txt  parameter_32x32.txt  parameter_64x64.txt  parameter_8x8.txt
results/size_limit/: out_1024x1024.txt  out_512x512.txt  parameter_4x4.txt  parameter_512x512.txt  parameter_64x64.txt  parameter_8x8.txt
results/zoom1/: out_128x128.txt  out_16x16.txt  out_32x32.txt  out_64x64.txt  out_8x8.txt  parameter_128x128.txt  parameter_16x16.txt  parameter_32x32.txt  parameter_64x64.txt  parameter_8x8.txt
rust_simulation/: Cargo.toml
rust_simulation/src/: lib.rs  main.rs  monte_carlo_results.rs  (+1 more)
simulation_manager/: main.py  pyproject.toml  run_and_plot.ipynb
src/: cluster_labels.rs  equivalence_class.rs  io_handler.py  ising_array_2d.rs  lib.rs  main.rs  monte_carlo_results.rs  parameter_reader.rs  rust_experiment_handler.py  rust_montecarlo_data_handler.py  swendsen_wang_algorithm.rs
(+46 files in other folders)
