[project]
name = "simulation-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fssa",
    "matplotlib>=3.10.6",
    "physsm",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
fssa = { git = "https://github.com/JefferyWangSH/pyfssa.git" }
physsm = { git = "https://github.com/so-groenen/physsm.git" }

